--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "mongodb": "^6.14.2",
     "mongoose": "^5.12.9",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
@@ -11,7 +14,6 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js"
   },
